<resources>
    <string name="app_name">GehueGuru Quant</string>
    <string name="title_activity_introduction_lesson1">1.1.1 Introduction</string>
    <string name="number_is_a_nu">Number is “a numeral or group of numerals”. In this lesson, you will learn different types of numbers and divisibility rules of natural numbers. It is important for the students to understand the different types of numbers as it forms the base for all questions that will follow.</string>
    <string name="this_le">This lesson consists of 9 pages besides the assignment and assessment. It is approximately 5% of the whole course. It is advisable to plan your time in such a way that you complete the whole course within this timeline. If the course is instructor driven, this lesson should take around 1.5 hours to discuss. On the other hand, if you are doing self study, this lesson would require around 3 hours to complete. After understanding the concepts and the solved examples, you must put in around 4-5 hours in practicing the various types of problems in the topic.When you go through the learning outcomes, keep in your mind that these are the final objectives to be derived while studying this lesson.</string>
    <string name="after_c">"After completion of this lesson, you will be able to:\n\n"
"\u2022	Understand different types of numbers\n"
"\u2022	Know the classification of numbers\n"
        "\u2022	Understand divisibility rules of different numbers\n"
"\u2022	Learn to solve problems in the most effective way\n"

</string>
    <string name="n">"<p>Types of Number and their definition: Numbers can be defined to be of two types &ndash;
        Real Number and Imaginary Number. Real number &ndash; Real number can be expressed on the number line. In other words, all the real numbers can be felt or experienced in the real world. Imaginary number &ndash;
        In contrast to Real numbers, Imaginary numbers cannot be plotted on the number line and they cannot be felt or experienced in the real world.</p>
"</string>
    <string name="if_a_number">"<p>If a number can be expressed as a fraction (p/q)&nbsp;where&nbsp;p&nbsp;and&nbsp;q&nbsp;are integers andq&ne;0, then the number is known as Rational Number. The term &lsquo;rational&rsquo;
        originates from the word ratio, simplybecause the rational numbers can be written in the format of a ratio.</p>

<p>&nbsp;</p>

<p>For example &ndash; 2/5, 4/7, 23/4 etc are rational numbers.&nbsp;&nbsp;Rational numbers can be positive as well as negative.&nbsp;</p>

<p><b>Irrational Numbers</b></p>

<p>Any real number that is not rational is irrational. In other words, an irrational number cannot be written as a fraction&nbsp;p/q&nbsp;for any integer p and q.&nbsp;</p>

<p>Most famous irrational number is&Ouml;2, also known as Pythagoras&#39;s constant.</p>

<p><b>Integers</b></p>

<p>Any real number that does not have a decimal is an integer. Integers can be either positive or negative or zero.&nbsp;&nbsp;For example: 2, 3, -10, -22, o0 etc are integers.</p>

<p>Integers are also classified as Odd or even integers.</p>

<p>Even Integers &ndash; An integer that can be expressed in the format of 2N is known as an even integer, where N is an integer. In other words, any number that is divisible by 2 is an even integer. For example: 2, 4, 100 etc.&nbsp;</p>

<p>Odd Integers &ndash; An integer that can be expressed in the format of 2N +1 is known as an odd integer, where N is an integer. For example 1, 5, 101, -23 are odd integers.</p>

<p>Following calculations can be done between Odd and Even integers:</p>

<p>Odd &plusmn; Odd = Even</p>

<p>Even &plusmn; Even = Even</p>

<p>Odd &plusmn; Even = Odd</p>

<p>Even &plusmn; Odd = Odd</p>

<p>(Even)<sup>Odd</sup>= Even&nbsp;</p>

<p>(Odd)<sup>Even</sup>= Odd</p>

<p><b>Natural Number</b></p>

<p>Natural numbers are numbers used in counting: 1, 2, 3, 4, 5................upto infinity. Natural numbers are also known as positive integers.</p>

<p>Lowest natural number = 1.</p>

<p><b>Whole Numbers</b></p>

<p>When 0 is added to the set of natural numbers, we obtain whole numbers.&nbsp;&nbsp;So whole numbers are 0,1,2,3,4,5,................upto infinity. Whole numbers are also known as Non-negative integers.&nbsp;</p>

<p>Lowest whole number = 0</p>

<p><b>Prime Number &ndash;&nbsp;</b></p>

<p>Any number that has exactly two distinct factors is known as prime number. In other words, any number which is divisible by 1 and itself only is known as a prime number. For example &ndash;: 2 is a prime number, because 2 is divisible by 1 and 2 only (two distinct factors only).&nbsp;</p>

<p>Lowest Prime Number&nbsp;=2</p>

<p><b>Composite Number &ndash;&nbsp;</b></p>

<p>Composite numbers are all the natural numbers&nbsp;which are greater than one and are not prime numbers.&nbsp;In other words, composite numbers are those numbers which will have atleast one factor other than 1 and itself. Hence composite numbers will have atleast 3 factors.&nbsp;</p>

<p>Lowest composite number = 4.</p>

<p>Remember that 1 is neither Prime number nor composite number.</p>

<p><b>Real Number Line&nbsp;</b></p>

<p>Real number line(in short also known as number line) consists of the union of the rational and irrational numbers.&nbsp;</p>

<p>Every real number can be shown with a single point on the&nbsp;<b>real number line&nbsp;</b>as shown in image 1.1.</p>"
</string>
    <string name="realnumber"><ul>
	<li>On the left hand side, it extends to&nbsp;&nbsp;&ndash; infinity (-) to&nbsp;&nbsp;(+&nbsp;on the right hand side.</li>
</ul>

<ul>
	<li style="margin-bottom:0cm;margin-bottom:.0001pt;text-autospace:none;">Numbers on the right hand side are always larger than the numbers on the left hand side.</li>
</ul>
</string>
    <string name="realnumbercontinue">"<p><strong>Example 1:</strong>x, y and z are three odd natural numbers. Which of the following will NOT be an Odd Integer?</p>

<p>(a) x&nbsp;<span style="font-family:Symbol">+</span>y&nbsp;<span style="font-family:Symbol">+</span>z</p>

<p>(b) x - y&nbsp;<span style="font-family:Symbol">+</span>z</p>

<p>(c) x&nbsp;<span style="font-family:Symbol">+</span>2y&nbsp;<span style="font-family:Symbol">+</span>3z</p>

<p>(d) 2x&nbsp;<span style="font-family:Symbol">+</span>3y&nbsp;<span style="font-family:Symbol">+</span>4z</p>

<p><strong>Solution:&nbsp;</strong></p>

<p>To solve these questions, it is best to assume the values of x, y and z and verify the options one by one.</p>

<p>Assume x&nbsp;<span style="font-family:Symbol">=</span>5, y&nbsp;<span style="font-family:Symbol">=</span>3 and z&nbsp;<span style="font-family:Symbol">=</span>1</p>

<p>Verifying option (a) x&nbsp;<span style="font-family:Symbol">+</span>y&nbsp;<span style="font-family:Symbol">+</span>z&nbsp;<span style="font-family:Symbol">=</span>5&nbsp;<span style="font-family:Symbol">+</span>3&nbsp;<span style="font-family:Symbol">+</span>1&nbsp;<span style="font-family:Symbol">=</span>9. This is an odd number. Hence option (a) is not the answer.</p>

<p>Verifying option (b) x - y&nbsp;<span style="font-family:Symbol">+</span>z&nbsp;<span style="font-family:Symbol">=</span>5 - 3&nbsp;<span style="font-family:Symbol">+</span>1&nbsp;<span style="font-family:Symbol">=</span>3. This is an odd number. Hence option (b) is not the answer.</p>

<p>Verifying option (c) x&nbsp;<span style="font-family:Symbol">+</span>2y&nbsp;<span style="font-family:Symbol">+</span>3z&nbsp;<span style="font-family:Symbol">=</span>5&nbsp;<span style="font-family:Symbol">+</span>6&nbsp;<span style="font-family:Symbol">+</span>3&nbsp;<span style="font-family:Symbol">=</span>14. This is an even number. Hence option (c) is the answer.</p>

<p>Verifying option (d) 2x&nbsp;<span style="font-family:Symbol">+</span>3y&nbsp;<span style="font-family:Symbol">+</span>4z&nbsp;<span style="font-family:Symbol">=</span>10&nbsp;<span style="font-family:Symbol">+</span>9&nbsp;<span style="font-family:Symbol">+</span>4&nbsp;<span style="font-family:Symbol">=</span>23. This is an odd number. Hence option (d) is not the answer.</p>

<p><strong>Example 2:</strong>p, q, r and s are four natural numbers. Two of these are odd and other two are even, though we do not know which two are even and other two are odd. Which of the following will MUST be an Even Integer?</p>

<p>(a) p&nbsp;<span style="font-family:Symbol">+</span>q&nbsp;</p>

<p>(b) p - r</p>

<p>(c) p&nbsp;<span style="font-family:Symbol">+</span>q&nbsp;<span style="font-family:Symbol">+</span>r - s</p>

<p>(d) 2p&nbsp;<span style="font-family:Symbol">+</span>3q&nbsp;<span style="font-family:Symbol">+</span>4r</p>

<p><strong>Solution</strong>:&nbsp;</p>

<p>At first, note that to solve this question, you will not be able to assume values as question does not provide the exact nature of the numbers a, b, c and d. The only point given is &ndash;
    two of these are Odd and other two are even.</p>

<p>Further, since question is asking for &ldquo;Must be&rdquo; an even number, an option can be eliminated if it gets an Odd number at the end.</p>

<p>Let us verify the options one by one:</p>

<p>Option (a) p&nbsp;<span style="font-family:Symbol">+</span>q</p>

<p>Option (a) p&nbsp;<span style="font-family:Symbol">+</span>q can be an odd number if p is an odd number and q is an even number. Hence option (a) will be eliminated.</p>

<p>&nbsp;Option (b) p - r</p>

<p>Option (b) p - r can be an odd number if p is an odd number and r is an even number. Hence option (b) will be eliminated.</p>

<p>Option (c) p&nbsp;<span style="font-family:Symbol">+</span>q&nbsp;<span style="font-family:Symbol">+</span>r &ndash;
    s contains two odd numbers and two even numbers. Resultant of two odd numbers will be always even number and resultant of two even numbers will be an even number. Finally resultant of these even numbers will again be an even number. Hence option (c) is the answer.&nbsp;</p>

<p>Option (d) 2p&nbsp;<span style="font-family:Symbol">+</span>3q&nbsp;<span style="font-family:Symbol">+</span>4r can be an odd number if p is an odd number, q is an odd number and r is an even number. Hence option (d) will be eliminated.</p>
"</string>
    <string name="realnumbercontinue1">"<p>Total number of single digit natural numbers&nbsp;<span style="font-family:Symbol">=</span>9. These numbers occur from 1 to 9.</p>

<p>Total number of two-digits natural numbers&nbsp;<span style="font-family:Symbol">=</span>90. These numbers occur from 10 to 99.</p>

<p>Total number of three-digits natural numbers&nbsp;<span style="font-family:Symbol">=</span>900. These numbers occur from 100 to 999.</p>

<p>It can be generalized now that number of four-digits natural numbers = 9000 and so on.</p>

<p><strong>Example 3:</strong>How many times the digits of a computer keyboard will be required to be pressed in typing 1<sup>st</sup>100 natural numbers?</p>

<p><strong>Solution:&nbsp;</strong></p>

<p>Natural numbers are going to be of single digit, two-digits and three-digits when you write 1<sup>st</sup>100 natural numbers.</p>

<p>Number of natural numbers of 1 digit = 9&nbsp;<span style="font-family:Symbol">&THORN;</span>Number of digits = 9 &times;
    1 = 9</p>

<p>Number of natural numbers of 2 digits = 90&nbsp;<span style="font-family:Symbol">&THORN;</span>Number of digits = 90 &times;
    2 = 180</p>

<p>Number of natural numbers of 3 digits = 1&nbsp;<span style="font-family:Symbol">&THORN;</span>Number of digits = 1 &times;
    3 = 3</p>

<p>Hence total number of digits used in typing 1<sup>st</sup>100 natural numbers =&nbsp;&nbsp;9 + 180 + 3 = 192</p>
"</string>
</resources>